feat: add work operation relation query API
