# docs/api/slices/work-operation.openapi.yaml
@@ -642,6 +642,33 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponseWorkOperationVoidEligibilityResponse'
+  /api/work-operations/{workOperationId}/relations:
+    get:
+      tags:
+      - work-operation-controller
+      operationId: getRelations
+      parameters:
+      - name: workOperationId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: kind
+        in: query
+        required: true
+        schema:
+          type: string
+          enum:
+          - CREATION_BATCH
+          - LINKED
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponseListWorkOperationSummaryResponse'
   /api/work-operations/{workOperationId}/graph:
     get:
       tags:
